src/snapshots/tat__app__test__open_jump_to_line.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                               point                                               ▲"
"                                                                                                   █"
"Feature   │geom                                         field                                      █"
"1         │POINT (0 0)                                  NULL                                       █"
"2         │POINT (1 0)                                  NULL                                       █"
"3         │POINT (1 1)                                  NULL                                       █"
"4         │POINT (0 1)                                  NULL                                       █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │               ╭────────────── Jump To Feature ───────────────╮                         █"
"          │               │                                              │                         █"
"          │               ╰───── <press Enter to jump, q to cancel> ─────╯                         █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"          │                                                                                        █"
"────────────────────────────────────── <type ? to show help> ──────────────────────────────────────▼"
"◄██████████████████████████████████████████████████████████████████████████████████████████████████►"
